--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "@cerebral/react": "^3.0.1",
     "cerebral": "^4.0.1",
+    "emotion": "^8.0.12",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17",
-    "styled-components": "^2.4.0"
+    "react-emotion": "^8.0.12",
+    "react-scripts": "1.0.17"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -20,8 +21,9 @@
     "format": "prettier-standard 'src/**/*.js'"
   },
   "devDependencies": {
+    "babel-plugin-emotion": "^8.0.12",
     "prettier-standard": "^8.0.0",
-    "react-app-rewire-styled-components": "^3.0.0",
+    "react-app-rewire-emotion": "^3.0.0",
     "react-app-rewired": "^1.4.0",
     "standard": "^10.0.3"
   }
