--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-emotion": "^8.0.12",
-    "react-scripts": "1.0.17"
+    "react-scripts": "^1.1.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -21,7 +21,7 @@
     "format": "prettier-standard 'src/**/*.js'"
   },
   "devDependencies": {
-    "babel-plugin-emotion": "^8.0.12",
+    "babel-plugin-emotion": "^8.0.2",
     "prettier-standard": "^8.0.0",
     "react-app-rewire-emotion": "^3.0.0",
     "react-app-rewired": "^1.4.0",
