--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "./node_modules/.bin/standard && react-app-rewired test --env=jsdom",
+    "test": "standard && react-app-rewired test --env=jsdom",
     "eject": "react-app-rewired eject",
-    "lint": "./node_modules/.bin/standard",
-    "lint-fix": "prettier-standard 'src/**/*.js' && ./node_modules/.bin/standard --fix",
+    "lint": "standard",
+    "lint-fix": "prettier-standard 'src/**/*.js' && standard --fix",
     "format": "prettier-standard 'src/**/*.js'"
   },
   "devDependencies": {
